Add Authentication FE and BE
